ui_tests/assignment_1.stderr
error: mismatched types: a:A[] b:B[]
  ┌─ main.box:6:5
  │
6 │     a := new B {};
  │     ^^^^^^^^^^^^^

