ui_tests/assignment_1.box
type A {}
type B {}

fn foo() {
    let a = new A {};
    a := new B {};
}